--- a/package.json
+++ b/package.json
@@ -19,9 +19,7 @@
   },
   "homepage": "https://github.com/Sam-Walters93/note-taker#readme",
   "dependencies": {
-    "express": "^4.17.1"
-  },
-  "devDependencies": {
+    "express": "^4.17.1",
     "uniqid": "^5.3.0"
   }
 }
